--- a/assets/scss/3.components.menu.scss
+++ b/assets/scss/3.components.menu.scss
@@ -56,7 +56,7 @@
 	height: pxToRem(40px);
 
   @include breakpoint(sm) {
-    margin: pxToRem(1px) pxToRem(6px);
+    margin: pxToRem(6px) pxToRem(6px) pxToRem(2px);
   }
   @include breakpoint(md-xl) {
     margin: pxToRem(1px) pxToRem(5px);
